# dendrite-cpp

./: CMakeLists.txt  README.md
res/models/: test.dm
src/: main.cpp
src/core/: dendrite.cpp  dendrite.hpp
src/math/: ActivationFunction.hpp  ColumnVector.hpp  CostFunction.hpp  Matrix.cpp  Matrix.hpp  QuadraticCost.hpp  ReLU.hpp  Sigmoid.hpp  Softmax.hpp  matrix.hpp
src/nn/: Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp
src/testing/: Mnist.hpp
